<resources>
    <string name="app_name">Dev Hub</string>
    <string name="title_activity_sample">Sample</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_devhub_space">DevhubSpaceActivity</string>
    <string name="title_activity_user_booking">UserBookingActivity</string>

    <!--info sampler-->

    <string name="name_sampler">"John Doe Alaska"</string>
    <string name="email_sampler">"johndoe@gmail.com"</string>
    <string name="contact_sampler">"09221122333"</string>
    <string name="space_type_sampler">"Conference</string>
    <string name="rate_sampler">3/hrs</string>
    <string name="message_title_sampler">"Sample Text.. Sample Text.. Sample Text.."</string>
    <string name="period_sampler">Check-in Time</string>
    <string name="guest_number_sampler">14</string>


    <!---->
    <string name="booknow">"Book Now!</string>
    <string name="firstname_hint">"Firstname"</string>
    <string name="lastname_hint">"Lastname"</string>
    <string name="email_hint">"Email Address"</string>
    <string name="contact_hint">"Contact Number"</string>
    <string name="reserve_button">NEXT</string>
    <string name="length_stay">Length of stay</string>
    <string name="message_title">Message</string>
    <string name="check_in">Check-in Time</string>
    <string name="check_out">Check-out Time</string>
    <string name="length_plan_hour">Hourly</string>
    <string name="length_plan_daily">Daily</string>
    <string name="length_plan_weekly">Weekly</string>
    <string name="reserve_space">RESERVE MY SPACE</string>
    <string name="hint_message">Your message here.</string>
    <string name="remarks_text">Remarks:</string>
    <string name="confirmation_text">Are you sure you want to be booked in this space?</string>
    <string name="devhub_text1">The #1 coworking space in Davao City</string>
    <string name="create_account">dont have account yet? Create one.</string>
    <string name="register_acount">Register Now!</string>
    <string name="register_button">Register</string>
    <string name="password_register">Password</string>
    <string name="dev_location"><u>Find Us.</u></string>
    <string name="devhub_title">DEV HUB</string>


    <!--fixed-->
    <string name="fixed_title">Fixed Desk</string>

    <!-- open space rates -->
    <string name="openspace_title">Open Space</string>
    <string name="openspace_hour_rate">Php 50/ hour</string>
    <string name="openspace_day_rate">Php 300/ day</string>
    <string name="openspace_week_rate">Php 1200/ week</string>
    <string name="openspace_inclusions">Inclusive use of open desk or table space, internet and coffee.</string>

    <!-- private space rates -->
    <string name="privatespace_title">Private Space</string>
    <string name="privatespace_hour_rate">Php 75/ hour</string>
    <string name="privatespace_day_rate">Php 350/ day</string>
    <string name="privatespace_week_rate">Php 1500/ week</string>

    <!-- conference room Rates -->
    <string name="conference_title">Conference/Meeting</string>
    <string name="conference_hour_rate">Php 300/ hour</string>
    <string name="conference_capacity">(Up to 10-40 members)</string>
    <string name="title_activity_type_space">TypeSpaceActivity</string>
    <string name="select"><u>Find Us.</u></string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="terms_and_condition"><b>Terms and Conditions</b>:\n\nagreement is the agreement that includes the terms, the rules and the guidelines of acceptable behavior, plus other useful sections, to which users must agree in order to use or access your website and mobile app.</string>

    <string name="confirm_summary">Confirm</string>

    <string name="title_activity_maps">Map</string>


    <string-array name="roomType">
        <item>Room Type</item>
        <item>Conference</item>
        <item>Meeting</item>
    </string-array>
    <string-array name="schedule">
        <item>Pick a schedule</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string-array name="schedule2">
        <item>Pick a Schedule</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="title_activity_information">InformationActivity</string>
</resources>
